--- a/webroot/css/my-style.css
+++ b/webroot/css/my-style.css
@@ -17,14 +17,14 @@
 }
 
 .round-content h4 {
-    color: #003f54;
+    color:  #1a5d9b;
     padding-bottom: 0.5rem;
     margin-bottom: 20px;
-    border-bottom: 1px solid #003f54;;
+    border-bottom: 2px solid #1a5d9b;
 }
 
 .round-content .related h4 {
-    color: #4d8f97;
+    color: #63d3c6;
     padding-bottom: 0.5rem;
     margin-top: 20px;
     margin-bottom: 10px;
